added information about myself

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </dl>
     </section>
     <footer>
-        <p>Sristhi 2024</p>
+        <p>&copy; Sristhi 2024</p>
     </footer>
     </main>
 </body>
