updated size of image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Sristhi</h1>
     </header>
     <main>
-        <img src="WhatsApp Image 2024-04-06 at 19.11.47_e14b3c19.jpg" alt="Image">
+        <img src="WhatsApp Image 2024-04-06 at 19.11.47_e14b3c19.jpg" width="300" height="300" alt="Image" >
     <section>
         <h2>About Me</h2>
         <dl>
